test(testing): 集成测试运行环境降噪